# Claudelauncher

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  latest.json  package.json  pnpm-lock.yaml  transfer.md  vite.config.ts
docs/: IDE-Mode-Technical.md  IDE-Mode.md  Multi-Agent-Technical.md  Multi-Agent.md
docs/mockups/: ide-mode.html
scripts/: convert-icon.mjs  create-shortcut.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/conpty/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: ide.rs  lib.rs
src/agents/: claude.ts  codex.ts  registry.ts  types.ts
src/components/ide/: FilesDrawer.tsx  IdeView.tsx  JackInPicker.tsx  SessionRail.tsx  SessionTag.tsx  Terminal.tsx
src/components/layout/: Layout.tsx  StatusBar.tsx  TitleBar.tsx
src/components/projects/: AddProjectDialog.tsx  ColorPicker.tsx  EditProjectDialog.tsx  ModelField.tsx  ProjectList.tsx  ProjectRow.tsx  RecentCard.tsx  RecentCards.tsx
src/components/settings/: FlagToggle.tsx  ProjectFlagsModal.tsx  SettingsModal.tsx
src/components/shared/: Modal.tsx
src/hooks/: useProjects.ts  useSessions.ts  useSettings.ts  useUpdateChecker.ts
src/services/: ide.ts  launcher.ts  log.ts  store.ts
src/theme/: chromeRust.css
src/types/: index.ts
src/utils/: colors.ts  dateFormat.ts  flags.ts  models.ts
