[package]
name = "claude-launcher"
version = "0.1.0"
description = "A desktop launcher for Claude Code CLI"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
